--- a/00-html-css/empleos.html
+++ b/00-html-css/empleos.html
@@ -7,7 +7,9 @@
   <meta name="description" content="Listado con empleos y filtros para encontrar el trabajo de tus sueños.">
 
   <link rel="stylesheet" href="./styles.css" />
-  <script async src="./script.js"></script>
+  <!-- <script async src="./script.js"></script> -->
+  <script type="module" src="./main.js"></script>
+
 </head>
 
 <body>
@@ -41,8 +43,8 @@
       <h1>Encuentra tu próximo trabajo</h1>
       <p>Explora miles de oportunidades en el sector tecnológico.</p>
 
-      <form role="search">
-        <div class="search-bar">
+      <form id="empleos-search-form" role="search" >
+        <div class="search-bar">  
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
             stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"
             class="icon icon-tabler icons-tabler-outline icon-tabler-search">
@@ -51,20 +53,29 @@
             <path d="M21 21l-6 -6" />
           </svg>
 
-          <input required type="text" placeholder="Buscar trabajos, empresas o habilidades">
+          <input name="search" id="empleos-search-input" required type="text" placeholder="Buscar trabajos, empresas o habilidades">
         </div>
 
         <div class="search-filters">
           <select name="technology" id="filter-technology">
-            <option value="">Tecnología</option>
-            <option value="javascript">JavaScript</option>
-            <option value="python">Python</option>
-            <option value="java">Java</option>
-            <option value="react">React</option>
-            <option value="nodejs">Node.js</option>
+            <!--<optgroup label="Tecnologías populares">
+              <option value="java">Java</option>
+              <option value="react">React</option>
+              <option value="nodejs">Node.js</option>
+            </optgroup>-->
+
+              <option value="javascript">JavaScript</option>
+              <option value="python">Python</option>
+              <option value="react">React</option>
+              <option value="nodejs">Node.js</option>
+              <option value="java">Java</option>
+              <hr />
+              <option value="c ++">C++</option>
+              <option value="c#">C#</option>
+
           </select>
 
-          <select name="location" id="location">
+          <select  name="location" id="filter-location">
             <option value="">Ubicación</option>
             <option value="remoto">Remoto</option>
             <option value="cdmx">Ciudad de México</option>
@@ -73,7 +84,7 @@
             <option value="barcelona">Barcelona</option>
           </select>
 
-          <select name="experience-level" id="experience-level">
+          <select name="experience-level" id="filter-experience-level">
             <option value="">Nivel de experiencia</option>
             <option value="junior">Junior</option>
             <option value="mid">Mid-level</option>
@@ -82,13 +93,16 @@
           </select>
         </div>
       </form>
+
+      <span id="filter-selected-value"></span>
     </section>
 
     <section>
       <h2 style="text-align: center !important;">Resultados de búsqueda</h2>
-
+        
       <div class="jobs-listings">
-        <article class="job-listing-card">
+        <!-- Lista de empleos 
+        <article data-technology="react" data-modalidad="remoto" class="job-listing-card">
           <div>
             <a href="detalle.html"><h3>Ingeniero de Software</h3></a>
             <small>Tech Solutions Inc. | Remoto</small>
@@ -100,7 +114,7 @@
           <button class="button-apply-job" id="boton-importante">Aplicar</button>
         </article>
 
-        <article class="job-listing-card">
+        <article data-modalidad="cdmx" class="job-listing-card">
           <div>
             <a href="detalle.html"><h3>Analista de Datos</h3></a>
             <small>Data Driven Co. | Ciudad de México</small>
@@ -110,7 +124,7 @@
           <button class="button-apply-job">Aplicar</button>
         </article>
 
-        <article class="job-listing-card">
+        <article data-modalidad="guadalajara" class="job-listing-card">
           <div>
             <a href="detalle.html"><h3>Desarrollador de Aplicaciones Móviles</h3></a>
             <small>Mobile Apps Ltd. | Guadalajara</small>
@@ -120,7 +134,7 @@
           <button class="button-apply-job">Aplicar</button>
         </article>
 
-        <article class="job-listing-card">
+        <article data-modalidad="remoto"  class="job-listing-card">
           <div>
             <a href="detalle.html"><h3>Ingeniero de DevOps</h3></a>
             <small>Cloud Services SA | Remoto</small>
@@ -131,6 +145,7 @@
           </div>
           <button class="button-apply-job">Aplicar</button>
         </article>
+        -->
       </div>
 
       <nav class="pagination">
