Add DevJobsAvatar component and update HTML structure for user avatars

--- a/00-html-css/empleos.html
+++ b/00-html-css/empleos.html
@@ -33,8 +33,14 @@
     </nav>
 
     <div>
-      <a href="">Publicar un empleo</a>
-      <!-- <a href="">Iniciar sesión</a> -->
+      <devjobs-avatar service="google" username="google.com" size="32">
+      </devjobs-avatar>
+
+      <devjobs-avatar service="google" username="netflix.com" size="32">
+      </devjobs-avatar>
+
+      <devjobs-avatar service="google" username="vercel.com" size="32">
+      </devjobs-avatar>
     </div>
   </header>
 
